Dialog: prevent from jumping around

--- a/styles/essentials.css
+++ b/styles/essentials.css
@@ -240,7 +240,7 @@ body {
   z-index: 100000000000;
 
   animation: dialog-fade-in 0.5s;
-  transform: scale(1);
+  opacity: 0;
 }
 .aux-dialog.aux-show {
   opacity: 1;
@@ -251,11 +251,9 @@ body {
 @keyframes dialog-fade-in {
   0% {
     opacity: 0;
-    transform: scale(1);
   }
   100% {
     opacity: 1;
-    transform: scale(1);
   }
 }
 
